# letterboxd-watchlist-in-jellyfin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: film.rs  jellyfin.rs  letterboxd.rs  main.rs
src/jellyfin/: api.rs  credentials.example.rs
